@@ -22,6 +22,7 @@ Jython 2.5.2a1
     - [ 1576 ] files opened in 'a+' mode not readable
     - [ 1563 ] unicode() for Java objects working differently in 2.2 and 2.5
     - [ 1566 ] os.popen(cmd).read() returns `\r\n` as newline on Windows with Jython 2.5
+    - [ 1517 ] TypeError: get_referrers
     - Fix runtime issues during exitfuncs triggered via SystemRestart (such as
       during Django or Pylons development mode reloading)
     - Fix pickling of collections.defaultdict objects
